--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             <ul id="navbar" class="navbar-nav fw-bold justify-content-end align-items-center flex-grow-1">
               <li class="nav-item dropdown">
                 <a class="nav-link me-5 active dropdown-toggle border-0" href="#" data-bs-toggle="dropdown"
-                  aria-expanded="false">Home</a>
+                  aria-expanded="false">Principal</a>
                 <ul class="dropdown-menu fw-bold">
                   <li>
                     <a href="index.html" class="dropdown-item">Home V1</a>
