--- a/blog.html
+++ b/blog.html
@@ -168,7 +168,7 @@
                 <span class="product-price fs-3">$99</span>
                 <div class="product-details">
                   <p class="fs-7">Buy nice shoes and a good mattress, because when you're not in one you're in the
-                    other. With three pairs of shoes, I can travel the world.</p>
+                    other. With eight pairs of shoes, I can travel the world.</p>
                 </div>
                 <ul class="select">
                   <li>
