--- a/blog.html
+++ b/blog.html
@@ -717,7 +717,7 @@
               </div>
             </div>
             <div class="widget sidebar-recent-post mt-5">
-              <h5 class="widget-title text-decoration-underline">Recent</h5>
+              <h5 class="widget-title text-decoration-underline">Recent Products</h5>
               <div class="sidebar-post-item">
                 <div class="row g-3 mb-3">
                   <div class="col-md-4">
