--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             <div class="modal-footer mt-5 d-flex justify-content-center">
               <button type="button" class="btn btn-red hvr-sweep-to-right dark-sweep">Login</button>
               <button type="button"
-                class="btn btn-outline-gray hvr-sweep-to-right dark-sweep">Register</button>
+                class="btn btn-outline-gray hvr-sweep-to-right dark-sweep"><a href="register-user.html">Register</a></button>
             </div>
           </div>
         </div>
@@ -550,9 +550,9 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="card d-flex flex-row align-items-end border-0 large jarallax-keep-img">
-              <img src="images/card-image1.jpg" alt="shoes" class="img-fluid jarallax-img">
+              <img src="images/carrouselImage1.jpg" alt="shoes" class="img-fluid jarallax-img">
               <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
-                <h2 class="card-title display-3 light">Stylish shoes for Women</h2>
+                <h2 class="card-title display-3 light">Stylish shoes</h2>
                 <a href="shop.html"
                   class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop Now</a>
               </div>
@@ -562,7 +562,7 @@
             <div class="row g-4">
               <div class="col-lg-12 mb-4">
                 <div class="card d-flex flex-row align-items-end border-0 jarallax-keep-img">
-                  <img src="images/card-image2.jpg" alt="shoes" class="img-fluid jarallax-img">
+                  <img src="images/carrouselImage2.jpg" alt="shoes" class="img-fluid jarallax-img">
                   <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
                     <h2 class="card-title style-2 display-4 light">Sports Wear</h2>
                     <a href="shop.html"
@@ -572,7 +572,7 @@
               </div>
               <div class="col-lg-12">
                 <div class="card d-flex flex-row align-items-end border-0 jarallax-keep-img">
-                  <img src="images/card-image3.jpg" alt="shoes" class="img-fluid jarallax-img">
+                  <img src="images/carrouselImage3.jpg" alt="shoes" class="img-fluid jarallax-img">
                   <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
                     <h2 class="card-title style-2 display-4 light">Fashion Shoes</h2>
                     <a href="shop.html"
@@ -584,9 +584,9 @@
           </div>
           <div class="swiper-slide">
             <div class="card d-flex flex-row align-items-end border-0 large jarallax-keep-img">
-              <img src="images/card-image4.jpg" alt="shoes" class="img-fluid jarallax-img">
+              <img src="images/carrouselImage4.jpg" alt="shoes" class="img-fluid jarallax-img">
               <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
-                <h2 class="card-title display-3 light">Stylish shoes for men</h2>
+                <h2 class="card-title display-3 light">Stylish shoes</h2>
                 <a href="shop.html"
                   class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop Now</a>
               </div>
@@ -596,9 +596,9 @@
             <div class="row g-4">
               <div class="col-lg-12 mb-4">
                 <div class="card d-flex flex-row align-items-end border-0 jarallax-keep-img">
-                  <img src="images/card-image5.jpg" alt="shoes" class="img-fluid jarallax-img">
+                  <img src="images/carrouselImage5.jpg" alt="shoes" class="img-fluid jarallax-img">
                   <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
-                    <h2 class="card-title style-2 display-4 light">Men Shoes</h2>
+                    <h2 class="card-title style-2 display-4 light">Classic Shoes</h2>
                     <a href="shop.html"
                       class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop Now</a>
                   </div>
@@ -608,7 +608,7 @@
                 <div class="card d-flex flex-row align-items-end border-0 jarallax-keep-img">
                   <img src="images/card-image6.jpg" alt="shoes" class="img-fluid jarallax-img">
                   <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
-                    <h2 class="card-title style-2 display-4 light">Women Shoes</h2>
+                    <h2 class="card-title style-2 display-4 light">New Shoes</h2>
                     <a href="shop.html"
                       class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop Now</a>
                   </div>
