--- a/shop.html
+++ b/shop.html
@@ -374,7 +374,7 @@
             <div class="modal-footer mt-5 d-flex justify-content-center">
               <button type="button" class="btn btn-red hvr-sweep-to-right dark-sweep">Login</button>
               <button type="button"
-                class="btn btn-outline-gray hvr-sweep-to-right dark-sweep">Register</button>
+                class="btn btn-outline-gray hvr-sweep-to-right dark-sweep"><a href="register-user.html">Register</a></button>
             </div>
           </div>
         </div>
