--- a/single-product.html
+++ b/single-product.html
@@ -615,25 +615,6 @@
               Bibendum adipiscing platea blandit sit sed quam semper rhoncus. Diam ultrices maecenas consequat eu tortor
               orci.</p>
             <div class="cart-wrap padding-small">
-              <div class="color-options product-select">
-                <div class="color-toggle" data-option-index="0">
-                  <h5 class="widget-title text-decoration-underline pe-2">Color:</h5>
-                  <ul class="select-list list-unstyled d-flex">
-                    <li class="select-item pe-3" data-val="Green" title="Green">
-                      <a href="#">Green</a>
-                    </li>
-                    <li class="select-item pe-3" data-val="Orange" title="Orange">
-                      <a href="#">Orange</a>
-                    </li>
-                    <li class="select-item pe-3" data-val="Red" title="Red">
-                      <a href="#">Red</a>
-                    </li>
-                    <li class="select-item" data-val="Black" title="Black">
-                      <a href="#">Black</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
               <div class="swatch product-select" data-option-index="1">
                 <h5 class="widget-title text-decoration-underline pe-2">Size:</h5>
                 <ul class="select-list list-unstyled d-flex">
@@ -683,7 +664,7 @@
             </div>
             <div class="meta-product padding-small">
               <div class="meta-item d-flex align-items-baseline">
-                <h5 class="widget-title text-decoration-underline pe-2">SKU:</h5>
+                <h5 class="widget-title text-decoration-underline pe-2">Product Code:</h5>
                 <ul class="select-list list-unstyled d-flex">
                   <li data-value="S" class="select-item">1223</li>
                 </ul>
@@ -695,18 +676,7 @@
                     <a href="#">Men</a>,
                   </li>
                   <li data-value="S" class="select-item">
-                    <a href="#">Casual</a>,
-                  </li>
-                </ul>
-              </div>
-              <div class="meta-item d-flex align-items-baseline">
-                <h5 class="widget-title text-decoration-underline pe-2">Tags:</h5>
-                <ul class="select-list list-unstyled d-flex">
-                  <li data-value="S" class="select-item">
-                    <a href="#">Classic</a>,
-                  </li>
-                  <li data-value="S" class="select-item">
-                    <a href="#">Modern</a>
+                    <a href="#">Casual</a>
                   </li>
                 </ul>
               </div>
@@ -726,9 +696,6 @@
               <button class="nav-link active text-dark fs-5" id="nav-home-tab" data-bs-toggle="tab"
                 data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home"
                 aria-selected="true">Description</button>
-              <button class="nav-link text-dark fs-5" id="nav-information-tab" data-bs-toggle="tab"
-                data-bs-target="#nav-information" type="button" role="tab" aria-controls="nav-information"
-                aria-selected="false">Additional information</button>
               <button class="nav-link text-dark fs-5" id="nav-review-tab" data-bs-toggle="tab"
                 data-bs-target="#nav-review" type="button" role="tab" aria-controls="nav-review"
                 aria-selected="false">Reviews</button>
@@ -753,15 +720,6 @@
                 nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim
                 pellentesque felis. Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula
                 vulputate sem tristique cursus. </p>
-            </div>
-            <div class="tab-pane fade padding-small" id="nav-information" role="tabpanel"
-              aria-labelledby="nav-information-tab">
-              <p>It is Comfortable and Best</p>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                id est laborum.</p>
             </div>
             <div class="tab-pane fade padding-small" id="nav-review" role="tabpanel" aria-labelledby="nav-review-tab">
               <div class="review-box d-flex flex-wrap">
@@ -933,16 +891,7 @@
             <h5 class="widget-title pb-2">Info</h5>
             <ul class="menu-list list-unstyled">
               <li class="pb-2">
-                <a href="#">Track Your Order</a>
-              </li>
-              <li class="pb-2">
-                <a href="blog.html">Our Blog</a>
-              </li>
-              <li class="pb-2">
                 <a href="#">Privacy policy</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Shipping</a>
               </li>
               <li class="pb-2">
                 <a href="#">Contact Us</a>
@@ -961,53 +910,13 @@
             <h5 class="widget-title pb-2">About</h5>
             <ul class="menu-list list-unstyled">
               <li class="pb-2">
-                <a href="#">History</a>
-              </li>
-              <li class="pb-2">
                 <a href="#">Our Team</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Services</a>
               </li>
               <li class="pb-2">
                 <a href="#">Company</a>
               </li>
               <li class="pb-2">
                 <a href="#">Manufacture</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Wholesale</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Retail</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 pb-3">
-          <div class="footer-menu">
-            <h5 class="widget-title pb-2">Women Shoes</h5>
-            <ul class="menu-list list-unstyled">
-              <li class="pb-2">
-                <a href="#">Track Your Order</a>
-              </li>
-              <li class="pb-2">
-                <a href="blog.html">Our Blog</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Privacy policy</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Shipping</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Contact Us</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Help</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Community</a>
               </li>
             </ul>
           </div>
@@ -1017,41 +926,16 @@
             <h5 class="widget-title pb-2">Popular</h5>
             <ul class="menu-list list-unstyled">
               <li class="pb-2">
-                <a href="#">Prices Drop</a>
-              </li>
-              <li class="pb-2">
                 <a href="#">New Products</a>
               </li>
               <li class="pb-2">
                 <a href="#">Best Sales</a>
               </li>
               <li class="pb-2">
-                <a href="shop.html">Stores</a>
-              </li>
-              <li class="pb-2">
                 <a href="#" data-bs-toggle="modal" data-bs-target="#modallogin">Login</a>
               </li>
               <li class="pb-2">
                 <a href="#" data-bs-toggle="modal" data-bs-target="#modallong">Cart</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 pb-3">
-          <div class="footer-menu">
-            <h5 class="widget-title pb-2">Mens Collection</h5>
-            <ul class="menu-list list-unstyled">
-              <li class="pb-2">
-                <a href="#">Delivery</a>
-              </li>
-              <li class="pb-2">
-                <a href="about-us.html">About Us</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Shoes</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -1069,10 +953,7 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <p>© Copyright Stylish 2023.</p>
-        </div>
-        <div class="col-md-6 text-lg-end">
-          <p>Free HTML by <a href="https://templatesjungle.com/" target="_blank">TemplatesJungle</a></p>
+          <p>© Copyright Stylish 2025.</p>
         </div>
       </div>
     </div>
