redirect from the cart button to checkout

--- a/index.html
+++ b/index.html
@@ -328,7 +328,9 @@
                 </span>
               </div>
               <div class="modal-footer my-4 justify-content-center">
-                <button type="button" class="btn btn-red hvr-sweep-to-right dark-sweep">View Cart</button>
+                <a href="/chekout.html">
+                  <button type="button" class="btn btn-red hvr-sweep-to-right dark-sweep">View Cart</button>
+                </a>
                 <button type="button"
                   class="btn btn-outline-gray hvr-sweep-to-right dark-sweep">Checkout</button>
               </div>
