New version create product

--- a/create-product.html
+++ b/create-product.html
@@ -381,11 +381,7 @@
                                 <div class="col-md-6 mb-3">
                                     <label for="category" class="form-label">Size 1</label>
                                     <select id="category" name="category" class="form-control ps-3 text-input" required>
-                                        <option value="" selected>Select a category</option>
-                                        <option value="Sport">XL</option>
-                                        <option value="Casual">L</option>
-                                        <option value="Urban">M</option>
-                                        <option value="Urban">S</option>
+                                        <option value="Sport" selected>XL</option>
                                     </select>
                                 </div>
                                 <div class="col-md-6 mb-3">
@@ -417,11 +413,7 @@
                                 <div class="col-md-6 mb-3">
                                     <label for="category" class="form-label">Size 2</label>
                                     <select id="category" name="category" class="form-control ps-3 text-input" required>
-                                        <option value="" selected>Select a category</option>
-                                        <option value="Sport">XL</option>
-                                        <option value="Casual">L</option>
-                                        <option value="Urban">M</option>
-                                        <option value="Urban">S</option>
+                                        <option value="Casual" selected>L</option>
                                     </select>
                                 </div>
                                 <div class="col-md-6 mb-3">
@@ -453,11 +445,7 @@
                                 <div class="col-md-6 mb-3">
                                     <label for="category" class="form-label">Size 3</label>
                                     <select id="category" name="category" class="form-control ps-3 text-input" required>
-                                        <option value="" selected>Select a category</option>
-                                        <option value="Sport">XL</option>
-                                        <option value="Casual">L</option>
-                                        <option value="Urban">M</option>
-                                        <option value="Urban">S</option>
+                                        <option value="Urban" selected>M</option>
                                     </select>
                                 </div>
                                 <div class="col-md-6 mb-3">
@@ -489,11 +477,7 @@
                                 <div class="col-md-6 mb-3">
                                     <label for="category" class="form-label">Size 4</label>
                                     <select id="category" name="category" class="form-control ps-3 text-input" required>
-                                        <option value="" selected>Select a category</option>
-                                        <option value="Sport">XL</option>
-                                        <option value="Casual">L</option>
-                                        <option value="Urban">M</option>
-                                        <option value="Urban">S</option>
+                                        <option value="Urban" selected>S</option>
                                     </select>
                                 </div>
                                 <div class="col-md-6 mb-3">
