--- a/shop.html
+++ b/shop.html
@@ -237,7 +237,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <p><strong>Product Name:</strong> <span id="productNameModal">Zapatos Nike Air</span></p>
+          <p style="color: black;"><strong>Product Name:</strong> <span id="productNameModal">Nike Air</span></p>
           <img src="/images/card-large-item1.jpg" alt="Imagen del Producto" id="productImageModal" class="img-fluid">
           <div class="form-check mt-3">
             <input class="form-check-input" type="checkbox" id="confirmCheck">
