--- a/shop.html
+++ b/shop.html
@@ -596,6 +596,70 @@
   <div class="shopify-grid py-2 my-2 py-md-5 my-md-5">
     <div class="container-lg">
       <div class="row">
+        <aside class="col-lg-2 col-md-6 col-sm-12">
+          <div class="sidebar">
+            <div class="widget-menu">
+              <div class="widget-search-bar position-relative">
+                <form role="search" method="get" class="d-flex">
+                  <input class="search-field rounded-2" placeholder="Search" type="search">
+                  <div class="search-icon position-absolute end-0">
+                    <a href="#">
+                      <svg class="search">
+                        <use xlink:href="#search"></use>
+                      </svg>
+                    </a>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="widget-product-categories pt-5">
+              <h5 class="widget-title text-decoration-underline">Categories</h5>
+              <ul class="product-categories sidebar-list list-unstyled text-hover">
+                <li class="cat-item">
+                  <a href="shop.html">All</a>
+                </li>
+                <li class="cat-item">
+                  <a href="single-product.html">Men Shoes</a>
+                </li>
+                <li class="cat-item">
+                  <a href="single-product.html">Women Shoes</a>
+                </li>
+                <li class="cat-item">
+                  <a href="single-product.html">Sports Shoes</a>
+                </li>
+                <li class="cat-item">
+                  <a href="single-product.html">Child Shoes</a>
+                </li>
+              </ul>
+            </div>
+            <div class="widget-product-brands pt-3">
+              <h5 class="widget-title text-decoration-underline">Brands</h5>
+              <ul class="product-tags sidebar-list list-unstyled text-hover">
+                <li class="tags-item">
+                  <a href="shop.html">Nike</a>
+                </li>
+                <li class="tags-item">
+                  <a href="shop.html">Bata</a>
+                </li>
+                <li class="tags-item">
+                  <a href="shop.html">Woodland</a>
+                </li>
+                <li class="tags-item">
+                  <a href="shop.html">Puma</a>
+                </li>
+                <li class="tags-item">
+                  <a href="shop.html">Adidas</a>
+                </li>
+                <li class="tags-item">
+                  <a href="shop.html">Reebok</a>
+                </li>
+                <li class="tags-item">
+                  <a href="shop.html">Liberty</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </aside>
         <main class="col-lg-10 col-md-6 col-sm-12">
           <div class="filter-shop d-flex justify-content-between">
             <div class="showing-product">
@@ -655,16 +719,20 @@
                   <img src="images/card-large-item2.jpg" alt="product-item" class="product-image img-fluid">
                   <div class="cart-concern position-absolute d-flex justify-content-center">
                   <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
+
                     <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modallong">
                       <svg class="shopping-carriage">
                         <use xlink:href="#shopping-carriage"></use>
                       </svg>
                     </button>
-                    <button type="button" class="btn btn-light" data-bs-target="#modaltoggle" data-bs-toggle="modal">
-                      <svg class="quick-view">
-                        <use xlink:href="#quick-view"></use>
-                      </svg>
-                    </button>
+                                       
+                    <a href="/single-product.html">
+                      <button type="button" class="btn btn-light">
+                        <svg class="quick-view">
+                          <use xlink:href="#quick-view"></use>
+                        </svg>
+                      </button>
+                    </a>
                   </div>
                 </div>
                   <!-- cart-concern -->
@@ -875,90 +943,7 @@
             </div>
           </div>
         </main>
-        <aside class="col-lg-2 col-md-6 col-sm-12">
-          <div class="sidebar">
-            <div class="widget-menu">
-              <div class="widget-search-bar position-relative">
-                <form role="search" method="get" class="d-flex">
-                  <input class="search-field rounded-2" placeholder="Search" type="search">
-                  <div class="search-icon position-absolute end-0">
-                    <a href="#">
-                      <svg class="search">
-                        <use xlink:href="#search"></use>
-                      </svg>
-                    </a>
-                  </div>
-                </form>
-              </div>
-            </div>
-            <div class="widget-product-categories pt-5">
-              <h5 class="widget-title text-decoration-underline">Categories</h5>
-              <ul class="product-categories sidebar-list list-unstyled text-hover">
-                <li class="cat-item">
-                  <a href="shop.html">All</a>
-                </li>
-                <li class="cat-item">
-                  <a href="single-product.html">Men Shoes</a>
-                </li>
-                <li class="cat-item">
-                  <a href="single-product.html">Women Shoes</a>
-                </li>
-                <li class="cat-item">
-                  <a href="single-product.html">Sports Shoes</a>
-                </li>
-                <li class="cat-item">
-                  <a href="single-product.html">Child Shoes</a>
-                </li>
-              </ul>
-            </div>
-            <div class="widget-product-brands pt-3">
-              <h5 class="widget-title text-decoration-underline">Brands</h5>
-              <ul class="product-tags sidebar-list list-unstyled text-hover">
-                <li class="tags-item">
-                  <a href="shop.html">Nike</a>
-                </li>
-                <li class="tags-item">
-                  <a href="shop.html">Bata</a>
-                </li>
-                <li class="tags-item">
-                  <a href="shop.html">Woodland</a>
-                </li>
-                <li class="tags-item">
-                  <a href="shop.html">Puma</a>
-                </li>
-                <li class="tags-item">
-                  <a href="shop.html">Adidas</a>
-                </li>
-                <li class="tags-item">
-                  <a href="shop.html">Reebok</a>
-                </li>
-                <li class="tags-item">
-                  <a href="shop.html">Liberty</a>
-                </li>
-              </ul>
-            </div>
-            <div class="widget-price-filter pt-3">
-              <h5 class="widget-titlewidget-title text-decoration-underline">Filter By Price</h5>
-              <ul class="product-tags sidebar-list list-unstyled text-hover border-bottom pb-3">
-                <li class="tags-item">
-                  <a href="shop.html">Less than $10</a>
-                </li>
-                <li class="tags-item">
-                  <a href="shop.html">$10- $20</a>
-                </li>
-                <li class="tags-item">
-                  <a href="shop.html">$20- $30</a>
-                </li>
-                <li class="tags-item">
-                  <a href="shop.html">$30- $40</a>
-                </li>
-                <li class="tags-item">
-                  <a href="shop.html">$40- $50</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </aside>
+        
       </div>
     </div>
   </div>
