Hover button from register fixed, log in js fixed aswell

--- a/home2.html
+++ b/home2.html
@@ -355,8 +355,9 @@
             </div>
             <div class="modal-footer mt-5 d-flex justify-content-center">
               <button type="button" class="btn btn-red hvr-sweep-to-right dark-sweep">Login</button>
-              <button type="button"
-                class="btn btn-outline-gray hvr-sweep-to-right dark-sweep"><a href="register-user.html">Register</a></button>
+              <a href="register-user.html">
+                    <button type="button" class="btn btn-outline-gray hvr-sweep-to-right dark-sweep" id="registerButton"> Register</button>
+                  </a>
             </div>
           </div>
         </div>
