--- a/register-user.html
+++ b/register-user.html
@@ -49,8 +49,9 @@
                 </div>
                 <div class="modal-footer mt-5 d-flex justify-content-center">
                   <button type="button" class="btn btn-red hvr-sweep-to-right dark-sweep">Login</button>
-                  <button type="button"
-                    class="btn btn-outline-gray hvr-sweep-to-right dark-sweep"><a href="register-user.html">Register</a></button>
+                  <a href="register-user.html">
+                    <button type="button" class="btn btn-outline-gray hvr-sweep-to-right dark-sweep" id="registerButton"> Register</button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -177,7 +178,7 @@
                         <a class="dropdown-item" href="styles.html">Styles <span class="badge bg-primary">PRO</span></a>
                       </li>
                       <li>
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#modallong" class="dropdown-item">cart</a>
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#modallong" class="dropdown-item">Cart</a>
                       </li>
                       <li>
                         <a href="#" data-bs-toggle="modal" data-bs-target="#modallogin" class="dropdown-item">Login</a>
@@ -362,7 +363,9 @@
     }
   }
   </script>
-  
+    <script src="js/jquery-1.11.0.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
