Erase Review Button and cart in register-user

--- a/single-product.html
+++ b/single-product.html
@@ -753,8 +753,9 @@
                         <span class="author-name">Mina Brown</span>
                         <span class="review-date">– 03/07/2023</span>
                       </div>
-                      <p>Vitae tortor condimentum lacinia quis vel eros donec ac. Nam at lectus urna duis convallis
+                      <p id="textReview">Vitae tortor condimentum lacinia quis vel eros donec ac. Nam at lectus urna duis convallis
                         convallis</p>
+                      <button id="deleteReviewButton"><i class="fa-solid fa-trash"></i></button>
                     </div>
                   </div>
                 </div>
@@ -788,8 +789,9 @@
                         <span class="author-name">Jenny Rose</span>
                         <span class="review-date">– 03/06/2022</span>
                       </div>
-                      <p>Vitae tortor condimentum lacinia quis vel eros donec ac. Nam at lectus urna duis convallis
+                      <p id="textReview">Vitae tortor condimentum lacinia quis vel eros donec ac. Nam at lectus urna duis convallis
                         convallis</p>
+                      <button id="deleteReviewButton"><i class="fa-solid fa-trash"></i></button>
                     </div>
                   </div>
                 </div>
