changes on index and shop html

--- a/index.html
+++ b/index.html
@@ -329,10 +329,11 @@
               </div>
               <div class="modal-footer my-4 justify-content-center">
                 <a href="/chekout.html">
-                  <button type="button" class="btn btn-red hvr-sweep-to-right dark-sweep">View Cart</button>
+                  <button type="button"
+                    class="btn btn-outline-gray hvr-sweep-to-right dark-sweep">Checkout
+                  </button>
                 </a>
-                <button type="button"
-                  class="btn btn-outline-gray hvr-sweep-to-right dark-sweep">Checkout</button>
+                
               </div>
             </div>
           </div>
