margin buttom added in profile.html

--- a/profile.html
+++ b/profile.html
@@ -366,7 +366,7 @@
           <!-- Purchase History -->
           <div id="purchase-history" class="profile-section bg-white p-4 rounded-3">
             <h2 class="section-title mb-4">Purchase History</h2>
-            <div class="purchase-items">
+            <div class="purchase-items" style="margin-bottom: 20px;">
               <!-- Purchase Item -->
               <div class="purchase-item border-bottom pb-4 mb-4">
                 <div class="row align-items-center">
