--- a/register-user.html
+++ b/register-user.html
@@ -500,7 +500,7 @@
         <!-- Image Column -->
         <div class="col-lg-6 mb-4 mb-lg-0">
           <div class="product-image-container">
-            <img src="https://images.unsplash.com/photo-1636718282214-0b4162a154f0?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Shoe" class="img-fluid rounded" id="currentProductImage" style="max-width: 100%; height: auto;">
+            <img src="/images/NikeShoePurple.png" alt="Shoe" class="img-fluid rounded" id="currentProductImage" style="max-width: 100%; height: auto;">
             <div class="image-preview mt-3" id="imagePreview" style="display: none;">
               <h4 class="mb-3">New Image Preview</h4>
               <img id="previewImage" src="#" alt="Preview" style="max-width: 100%; height: auto;" class="rounded">
